--- a/index.html
+++ b/index.html
@@ -39,5 +39,78 @@
             </p>
         </div>
     </section>
+    <section class="shows">
+        <nav class="shows__tabs">
+            <button class="shows__tabs__button shows__tabs__button--is-active">
+                    Em Breve
+            </button>
+            <button class="shows__tabs__button">
+                Mais Populares
+            </button>
+            <button class="shows__tabs__button">
+                Mais no Star+
+            </button>
+        </nav>
+        <ul class="shows__list shows__list--is-active">
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/desencantada.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/lobisomem.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/sem_limites.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/spidey.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/the_santa_clauses.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/willow.jpg" alt="">
+            </li>
+        </ul>
+        <ul class="shows__list">
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/desencantada.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/lobisomem.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/sem_limites.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/spidey.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/the_santa_clauses.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/willow.jpg" alt="">
+            </li>
+        </ul>
+        <ul class="shows__list">
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/desencantada.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/lobisomem.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/sem_limites.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/spidey.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/the_santa_clauses.jpg" alt="">
+            </li>
+            <li class="shows__list__item">
+                <img src="/src/images/em_breve/willow.jpg" alt="">
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
