--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
     </section>
     <section class="shows">
         <nav class="shows__tabs">
-            <button class="shows__tabs__button shows__tabs__button--is-active">
+            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">
                     Em Breve
             </button>
-            <button class="shows__tabs__button">
+            <button data-tab-button="populares" class="shows__tabs__button">
                 Mais Populares
             </button>
-            <button class="shows__tabs__button">
+            <button data-tab-button="star_plus" class="shows__tabs__button">
                 Mais no Star+
             </button>
         </nav>
-        <ul class="shows__list shows__list--is-active">
+        <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
                 <img src="/src/images/em_breve/desencantada.jpg" alt="">
             </li>
@@ -71,9 +71,9 @@
                 <img src="/src/images/em_breve/willow.jpg" alt="">
             </li>
         </ul>
-        <ul class="shows__list">
+        <ul data-tab-id="populares" class="shows__list">
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/desencantada.jpg" alt="">
+                <img src="/src/images/mais_populares/bluey.jpg" alt="">
             </li>
             <li class="shows__list__item">
                 <img src="/src/images/em_breve/lobisomem.jpg" alt="">
@@ -91,9 +91,9 @@
                 <img src="/src/images/em_breve/willow.jpg" alt="">
             </li>
         </ul>
-        <ul class="shows__list">
+        <ul data-tab-id="star_plus" class="shows__list">
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/desencantada.jpg" alt="">
+                <img src="/src/images/mais_no_star_plus/belair.jpg" alt="">
             </li>
             <li class="shows__list__item">
                 <img src="/src/images/em_breve/lobisomem.jpg" alt="">
@@ -112,5 +112,6 @@
             </li>
         </ul>
     </section>
+<script src="/src/styles/main.js"></script>
 </body>
 </html>
