--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
                     <img src="/src/images/logos/disney_star_plus.png" alt="disney+ - star+ - combo+">
-                    <button>Assine Agora</button>     
+                    <button class="button">Assine Agora</button>     
                     <span class="text">R$ 45,90/mês*</span>                    
                 </li>
                 <li class="hero__content__combos__combo">
                     <img src="/src/images/logos/disney_star_plus_starzplay.png" alt="disney+ - star+ - combo+">
-                    <button>Assine Agora</button>     
+                    <button class="button">Assine Agora</button>     
                     <span class="text">R$ 55,90/mês*</span>                    
                 </li>
             </ul>
@@ -76,19 +76,19 @@
                 <img src="/src/images/mais_populares/bluey.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/lobisomem.jpg" alt="">
+                <img src="/src/images/mais_populares/cavaleira_da_lua.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/sem_limites.jpg" alt="">
+                <img src="/src/images/mais_populares/o_incrivel_dr_pol.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/spidey.jpg" alt="">
+                <img src="/src/images/mais_populares/obi_wan.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/the_santa_clauses.jpg" alt="">
+                <img src="/src/images/mais_populares/red.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/willow.jpg" alt="">
+                <img src="/src/images/mais_populares/tudo_igual_sqn.jpg" alt="">
             </li>
         </ul>
         <ul data-tab-id="star_plus" class="shows__list">
@@ -96,22 +96,56 @@
                 <img src="/src/images/mais_no_star_plus/belair.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/lobisomem.jpg" alt="">
+                <img src="/src/images/mais_no_star_plus/libertadores.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/sem_limites.jpg" alt="">
+                <img src="/src/images/mais_no_star_plus/nba.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/spidey.jpg" alt="">
+                <img src="/src/images/mais_no_star_plus/os_simpson.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/the_santa_clauses.jpg" alt="">
+                <img src="/src/images/mais_no_star_plus/premier_league.jpg" alt="">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/willow.jpg" alt="">
+                <img src="/src/images/mais_no_star_plus/the_kardashians.jpg" alt="">
             </li>
         </ul>
     </section>
+    <section class="plans">
+        <h2 class="title--big">escolha seu plano</h2>
+        <ul class="plans__list">
+            <li class="plans__list__item">
+                <img src="/src/images/logos/disneyplus_underline.png">
+                <strong class="litle--small">R$ 27,90/mês*</strong>
+                <p class="text--big">
+                    no disney+ voce encontra as ultimas estreias do cinema, originais e classicos inesqueciveis. 
+                </p>
+                <button class="button">assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="/src/images/logos/disney_star_plus_sm.png">
+                <strong class="litle--small">R$ 45,90/mês*</strong>
+                <p class="text--big">
+                    assine disney+ e star+ jutnos. economize e aproveite agora os dois serviços por um preço unico 
+                </p>
+                <button class="button">assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="/src/images/logos/disney_star_plus_starzplay_underline.png">
+                <strong class="litle--small">R$ 55,90/mês*</strong>
+                <p class="text--big">
+                    no disney+, star+ e STARRZPLAY em um plano especial. assine agora os três serviços juntos.
+                </p>
+                <button class="button">assine agora</button>
+            </li>
+        </ul>
+        <p class="text--small">
+            *o preço pode variar caso a assinatura seja feita atraves de outras plataformas.
+        </p>
+    </section>
+
+
 <script src="/src/styles/main.js"></script>
 </body>
 </html>
