--- a/index.html
+++ b/index.html
@@ -144,6 +144,65 @@
             *o preço pode variar caso a assinatura seja feita atraves de outras plataformas.
         </p>
     </section>
+    <section class="image-text-section">
+        <img src="/src/images/tv_pc_tablet_celular.png" alt="televisao tablet e celular">
+        <div class="image-text-section__text_container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">
+                aproveite a tela grande da tv ou assista no tablet, laptop, celular e outros aparelhos. nossa seleçao de titulos em 4k nao para de crescer. alem disso, para a felicidade de todos, é possivel assistir em até 4 telas ao mesmo tempo.
+            </p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <img src="/src/images/fundo_rei_leao.png" alt="rei leao">
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe Filmes e series</h2>
+            <p class="text--big">
+                baixe e assista quando e onde quiser. assim, seus favoritos estao sempre com voce, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">disponivel no seus dispositivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="/src/images/dispositivos/computador.png" alt="computador">
+                <h4 class="title--small">computador</h4>
+                <ul class="text">
+                    <li>chrome OS</li>
+                    <li>MacOs</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="/src/images/dispositivos/tv.png" alt="computador">
+                <h4 class="title--small">computador</h4>
+                <ul class="text">
+                    <li>chrome OS</li>
+                    <li>MacOs</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="/src/images/dispositivos/celular.png" alt="computador">
+                <h4 class="title--small">computador</h4>
+                <ul class="text">
+                    <li>chrome OS</li>
+                    <li>MacOs</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="/src/images/dispositivos/videogames.png" alt="computador">
+                <h4 class="title--small">computador</h4>
+                <ul class="text">
+                    <li>chrome OS</li>
+                    <li>MacOs</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
 
 
 <script src="/src/styles/main.js"></script>
