--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="/dist/css/main.css">
 </head>
 <body>
-    <section class="hero">
-        <div class="hero__content">
-            <h1 class="hero__content__branding">
+    <header class="header">
+        <div class="header__container">
+            <h1 class="header__logo">
                 <img src="/src/images/disneyplus.svg" alt="Disney+">
             </h1>
+            <ul class="header__links">
+                <li class="header__links__item">
+                    <a href="#" class="button">assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a href="#" class="button">entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="hero__content">
+            <div class="hero__content__branding">
+                <img src="/src/images/disneyplus.svg" alt="Disney+">
+            </div>
             <h3 class="title--small">
                 As Melhores Historias Em Um So Lugar.
             </h3>
@@ -232,6 +247,49 @@
             </li>
         </ul>
     </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img  class="footer__logo" src="/src/images/disneyplus.svg" alt="disney+">
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="/src/images/icones/globe.svg" alt="globo mundo">
+                        <select>
+                            <option>English</option>
+                            <option selected>Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">termos e condiçoes de uso</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">politica de privacidade</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">proteçao de dados no brasil</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">anuncios personalizados</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">dispositivos compativeis</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">ajuda</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">sobre o disney+</a>
+                </li>
+            </ul>
+            <p class="text--small">
+                2022disney,disney+ e the walt disney company. todos os direitos reservados. serviços de assinatura paga. conteudo sujeito a disponibilidade
+            </p>
+            <p class="text--small">
+                disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condiçoes. o serviço disney+ é comercializado por the walt disney company (brasil)Ltda, world trade center,Av. Das Naçoes Unidas, 12.551, 12555, 12559, piso 10, sao paulo/sp - CEP 04578-903, brasil e CNPJ/M 73.042.962/0004-20
+            </p>
+        </div>
+    </footer>
 
 
 <script src="/src/styles/main.js"></script>
