--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <header class="header">
         <div class="header__container">
-            <h1 class="header__logo">
-                <img src="/src/images/disneyplus.svg" alt="Disney+">
+            <h1>
+                <img class="header__logo" src="/src/images/disneyplus.svg" alt="Disney+">
             </h1>
             <ul class="header__links">
                 <li class="header__links__item">
-                    <a href="#" class="button">assine agora</a>
+                    <a href="#" class="button button--secondary">assine agora</a>
                 </li>
                 <li class="header__links__item">
-                    <a href="#" class="button">entrar</a>
+                    <a href="#" class="button button--dark">entrar</a>
                 </li>
             </ul>
         </div>
